--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" type="text/css" href="style.css">
     <title>React App</title>
+
   </head>
   <body>
     <div id="root"></div>
 
-
+    <script src="scripts/bootstrap.js"
   </body>
 </html>
